package com.caldremch.http.core.abs

/**
 * Created by Leon on 2022/7/6
 */
interface IHeader {
    fun getCommonHeader():Map<String, String>
}