package com.caldremch.http.core.framework.base

/**
 * Created by Leon on 2022/10/30.
 */
interface IGetRequest<R : IRequest<R>> : IRequest<R>
